# serializer version: 1
# name: test_switch_entities_snapshot[switch.nano_color_2_holiday_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.nano_color_2_holiday_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Holiday mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Holiday mode',
    'platform': 'compit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'holiday_mode',
    'unique_id': '2_HOLIDAY_MODE',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.nano_color_2_holiday_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nano Color 2 Holiday mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nano_color_2_holiday_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities_snapshot[switch.nano_color_2_out_of_home_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.nano_color_2_out_of_home_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Out of home mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Out of home mode',
    'platform': 'compit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'out_of_home_mode',
    'unique_id': '2_OUT_OF_HOME_MODE',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.nano_color_2_out_of_home_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nano Color 2 Out of home mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nano_color_2_out_of_home_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities_snapshot[switch.r_900_force_domestic_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.r_900_force_domestic_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Force domestic hot water',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Force domestic hot water',
    'platform': 'compit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'force_dhw',
    'unique_id': '1_FORCE_DHW',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.r_900_force_domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'R 900 Force domestic hot water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.r_900_force_domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_switch_entities_snapshot[switch.r_900_holiday_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.r_900_holiday_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Holiday mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Holiday mode',
    'platform': 'compit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'holiday_mode',
    'unique_id': '1_HOLIDAY_MODE',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.r_900_holiday_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'R 900 Holiday mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.r_900_holiday_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
